Styled login form

--- a/src/assets/scss/01-settings/_settings.colors.scss
+++ b/src/assets/scss/01-settings/_settings.colors.scss
@@ -2,13 +2,14 @@
 $color-primary-blue: #edf5ff;
 $color-primary-grey: #414141;
 $color-primary-lightgrey: #bfbfbf;
-$color-primary-green: #71b971;
+$color-primary-green: #2f6424;
+$color-mint-green: #d3ecd2;
 $color-primary-yellow: #fcf2dc;
 $color-primary-pink: #fceeec;
 
 // Secondary
 $color-secondary-green: #f8fff8;
-$color-secondary-lightgrey: #f1f1f1;
+$color-secondary-lightgrey: #e1e1e1;
 
 // Hover
 $color-primary-yellow-hover: #fcf2dcf0;
