--- a/src/assets/scss/01-settings/_settings.fonts.scss
+++ b/src/assets/scss/01-settings/_settings.fonts.scss
@@ -1,4 +1,2 @@
-$font-primary: 'PT Sans', sans-serif;
-$font-secondary: 'PT Serif', serif;
-
+$font-primary: 'Inter', sans-serif;
 $font-weight-bold: 700;
