Add Dashboard header

--- a/src/assets/scss/01-settings/_settings.colors.scss
+++ b/src/assets/scss/01-settings/_settings.colors.scss
@@ -2,7 +2,7 @@
 $color-primary-blue: #edf5ff;
 $color-primary-grey: #414141;
 $color-primary-lightgrey: #bfbfbf;
-$color-primary-green: #2f6424;
+$color-primary-green: #2ec76d;
 $color-mint-green: #d3ecd2;
 $color-primary-yellow: #fcf2dc;
 $color-primary-pink: #fceeec;
@@ -18,3 +18,4 @@ $color-primary-yellow-dark-hover: #a29477f0;
 // Misc
 $color-red: #bd4c4c;
 $color-black: #000;
+$color-white: #fff;
