Update fonts to Varela and Playfair

--- a/src/assets/scss/01-settings/_settings.fonts.scss
+++ b/src/assets/scss/01-settings/_settings.fonts.scss
@@ -1,2 +1,3 @@
-$font-primary: 'Inter', sans-serif;
+$font-primary: 'Playfair Display', serif;
+$font-secondary: 'Varela Round', sans-serif;
 $font-weight-bold: 700;
