--- a/src/assets/scss/01-settings/_settings.fonts.scss
+++ b/src/assets/scss/01-settings/_settings.fonts.scss
@@ -1,3 +1,3 @@
 $font-primary: 'Playfair Display', serif;
 $font-secondary: 'Varela Round', sans-serif;
-$font-weight-bold: 700;
+$font-weight-semibold: 600;
