Add global container for max width

--- a/src/assets/scss/04-elements/_elements.base.scss
+++ b/src/assets/scss/04-elements/_elements.base.scss
@@ -9,4 +9,10 @@ body {
 
 .container {
 	padding: rem-calc(30) $site-padding;
+
+	&__inner {
+		max-width: 1200px;
+		margin-left: auto;
+		margin-right: auto;
+	}
 }
