Continue styling hero

--- a/src/assets/scss/01-settings/_settings.colors.scss
+++ b/src/assets/scss/01-settings/_settings.colors.scss
@@ -11,6 +11,9 @@ $color-primary-pink: #fceeec;
 $color-secondary-green: #f8fff8;
 $color-secondary-lightgrey: #e1e1e1;
 
+// Other
+$color-lightgrey-100: #6f6f6f;
+
 // Hover
 $color-primary-yellow-hover: #fcf2dcf0;
 $color-primary-yellow-dark-hover: #a29477f0;
