--- a/src/assets/scss/04-elements/_elements.base.scss
+++ b/src/assets/scss/04-elements/_elements.base.scss
@@ -7,6 +7,11 @@ body {
 	font-family: $font-secondary;
 }
 
+p {
+	color: $color-lightgrey-100;
+	margin-bottom: $site-vertical-margin;
+}
+
 .container {
 	padding: rem-calc(30) $site-padding;
 
