Styling hero card on dashboard

--- a/src/assets/scss/04-elements/_elements.base.scss
+++ b/src/assets/scss/04-elements/_elements.base.scss
@@ -10,6 +10,10 @@ body {
 p {
 	color: $color-lightgrey-100;
 	margin-bottom: $site-vertical-margin;
+
+	&:last-child {
+		margin-bottom: 0;
+	}
 }
 
 .container {
