--- a/src/assets/scss/05-utilities/_utilities.layout.scss
+++ b/src/assets/scss/05-utilities/_utilities.layout.scss
@@ -1,21 +1,3 @@
-.row {
-	display: flex;
-	flex-direction: row;
-	flex-wrap: wrap;
-	width: 100%;
-}
-
-.row--no-wrap {
-	flex-wrap: nowrap;
-	justify-content: space-between;
-}
-
-.row--vertical-center {
-	flex-direction: column;
-	justify-content: center;
-}
-
-.column {
-	flex: 1;
-	padding-right: rem-calc(30);
+.u-align-items-center {
+	align-items: center;
 }
