--- a/src/assets/scss/05-utilities/_utilities.layout.scss
+++ b/src/assets/scss/05-utilities/_utilities.layout.scss
@@ -1,3 +1,14 @@
 .u-align-items-center {
 	align-items: center;
 }
+
+.u-no-gutters {
+	margin-right: 0;
+	margin-left: 0;
+  
+	> .col,
+	> [class*="col-"] {
+	  padding-right: 0;
+	  padding-left: 0;
+	}
+  }
