--- a/src/assets/scss/05-utilities/_utilities.margin.scss
+++ b/src/assets/scss/05-utilities/_utilities.margin.scss
@@ -21,3 +21,10 @@ $margins: (0, 5, 10, 12, 15, 20, 25, 30, 35, 40, 50, 60);
 		margin-left: rem-calc($margin);
 	}
 }
+
+.u-site-vertical-margin\@mobile {
+	margin-bottom: $site-vertical-margin;
+	@include breakpoint(tablet-up) {
+		margin-bottom: inherit;
+	}
+}
