Began styling 'Recipes' section

--- a/src/assets/scss/01-settings/_settings.colors.scss
+++ b/src/assets/scss/01-settings/_settings.colors.scss
@@ -13,6 +13,7 @@ $color-secondary-lightgrey: #e1e1e1;
 
 // Other
 $color-lightgrey-100: #6f6f6f;
+$color-lightgrey-200: #efefef;
 
 // Hover
 $color-primary-yellow-hover: #fcf2dcf0;
