--- a/src/assets/scss/05-utilities/index.scss
+++ b/src/assets/scss/05-utilities/index.scss
@@ -2,4 +2,5 @@
 @import 'utilities.fonts';
 @import 'utilities.layout';
 @import 'utilities.margin';
+@import 'utilities.typography';
 @import 'utilities.width';
