Start syling first recipe card on Dashboard

--- a/src/assets/scss/04-elements/_elements.base.scss
+++ b/src/assets/scss/04-elements/_elements.base.scss
@@ -8,7 +8,7 @@ body {
 }
 
 p {
-	color: $color-lightgrey-100;
+	color: $color-primary-grey;
 	margin-bottom: $site-vertical-margin;
 
 	&:last-child {
